Fix title overlap issue.

--- a/CompareAnalysis/css/main.styl
+++ b/CompareAnalysis/css/main.styl
@@ -30,7 +30,7 @@ body{
 
 .panel_desc{
     margin-top:3px;
-    padding:4px;
+    padding:4px 4px .5em 4px;
 }
 
 .panel_title{
@@ -70,14 +70,13 @@ body{
   left:5px;
 }
 .mapInfo{
-  position: absolute;
-  right:2px;
-  top:2px;
+  float:right;
   font-size:1em !important;
   cursor:pointer;
   color:$font-color;
-}
-.article{
+  white-space:nowrap;
+  padding-right:4px;
+  padding-top:4px;
 }
 .mapInfoPanel{
   position:absolute;
@@ -91,13 +90,20 @@ body{
   background-color: transparent;
   background-color:#fff;
   background-color: rgba(255, 255, 255, 0.9);
-  padding: 28px 1em 1em 1em;
-
+  margin-top:30px;
+  padding:0 .5em 1.2em .5em;
 }
-.esriLegendServiceLabel{
-  display:none;
+
+.title{
+  display:inline-block;
+  max-width:80%;
+  text-align: center;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
 }
 .mapTitle{
+  width:100%;
   padding: 3px 2px 3px 2px;
   z-index:40;
   margin:auto;
@@ -105,9 +111,6 @@ body{
   top:0;
   left:0;
   right:0;
-  overflow:hidden;
-  text-overflow:ellipsis;
-  white-space:nowrap;
   text-align:center;
   font-size:1.2em;
   line-height:1.2em;
@@ -440,6 +443,11 @@ body{
     }
 
 }
+@media only screen and (max-width:600px){
+    .title{
+      display:none;
+    }
+}
 @media only screen and (max-width:820px){
     .esriAttribution{
       display: none;
@@ -467,3 +475,47 @@ body{
 
 .hidden {
   display: none; }
+
+$padding = 4px;
+$map-legend-padding=$padding;
+
+$map-legend-service-padding-top =$padding;
+$map-legend-service-padding-bottom= $padding*4;
+$map-legend-service-separator=1px solid darken(#f5f5f5, 15%);
+
+// layer
+
+$map-legend-layer-name-text-color 
+.esriLegendService {
+  padding-top: $map-legend-service-padding-top;
+  padding-bottom: $map-legend-service-padding-bottom;
+  border-bottom: $map-legend-service-separator;
+}
+
+.esriLegendServiceLabel {
+  display: block;
+  font-weight: bold;
+  position: relative;
+  width: 100%;
+}
+
+.esriLegendLayerLabel {
+  color: $map-legend-layer-name-text-color;
+  padding-left: $map-legend-padding * 2;
+}
+
+.esriLegendLayer {
+  padding-left: $map-legend-padding * 2;
+}
+
+.esriLegendGroupLayer {
+  padding-top: $map-legend-padding * 2;
+}
+
+.esriLegendLeft {
+  padding-left: $map-legend-padding * 3;
+}
+
+.esriLegendRight {
+  padding-right: $map-legend-padding * 3;
+}
